Rename entire repository + change 'drives_' to 'mounts_'
This is done since it makes more sense to refer to the entires as
'mounts' instead of 'drives'. It will also make a little more sense
with the future additions of new mount types.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,11 +2,12 @@
 - name: Unlock encrypted drives
   become: true
   shell: "cryptdisks_start {{ item.label }}"
-  with_items: "{{ drives_encrypted }}"
+  with_items: "{{ mounts_encrypted }}"
   register: unlock_drives
   ignore_errors: true
 
-- fail:
+- name: Verify all encrypted drives could be unlocked
+  fail:
     msg: "{{ item.stderr }}"
   when: >
     (item.rc != 0)
