--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-fstab_path: "/etc/fstab"
-cryptdisks_path: "/etc/default/cryptdisks"
-crypttab_path: "/etc/crypttab"
-mergefs_tmp_dir: "/tmp"
+mounts_fstab_path: "/etc/fstab"
+mounts_cryptdisks_path: "/etc/default/cryptdisks"
+mounts_crypttab_path: "/etc/crypttab"
+mounts_mergerfs_tmp_dir: "/tmp"
