--- a/tasks/install_mergerfs.yml
+++ b/tasks/install_mergerfs.yml
@@ -1,14 +1,14 @@
 ---
 - name: Download 'mergerfs' installation package
   get_url:
-    url: "https://github.com/trapexit/mergerfs/releases/download/{{ mergerfs_version }}/mergerfs_{{ mergerfs_version }}.{{ ansible_distribution|lower }}-{{ ansible_distribution_release }}_amd64.deb"
-    dest: "{{ mergefs_tmp_dir }}/mergerfs_{{ mergerfs_version }}.{{ ansible_distribution|lower }}-{{ ansible_distribution_release }}_amd64.deb"
-    timeout: 30
+    url: "https://github.com/trapexit/mergerfs/releases/download/{{ mounts_mergerfs_version }}/mergerfs_{{ mounts_mergerfs_version }}.{{ ansible_distribution|lower }}-{{ ansible_distribution_release }}_amd64.deb"
+    dest: "{{ mounts_mergerfs_tmp_dir }}/mergerfs_{{ mounts_mergerfs_version }}.{{ ansible_distribution|lower }}-{{ ansible_distribution_release }}_amd64.deb"
+    timeout: 60
 
 - name: Install 'mergerfs'
   become: true
   apt:
-    deb: "{{ mergefs_tmp_dir }}/mergerfs_{{ mergerfs_version }}.{{ ansible_distribution|lower }}-{{ ansible_distribution_release }}_amd64.deb"
+    deb: "{{ mounts_mergerfs_tmp_dir }}/mergerfs_{{ mounts_mergerfs_version }}.{{ ansible_distribution|lower }}-{{ ansible_distribution_release }}_amd64.deb"
 
 - name: Get infromation about the newly installed version of mergerfs
   become: true
@@ -16,10 +16,10 @@
   register: mergerfs_installed_version
 
 - fail:
-    msg: "mergerfs is reporting '{{ mergerfs_installed_version.stdout }}' as the installed version instead of the requested '{{ mergerfs_version }}'"
-  when: mergerfs_installed_version.stdout is not version(mergerfs_version, '==')
+    msg: "mergerfs is reporting '{{ mergerfs_installed_version.stdout }}' as the installed version instead of the requested '{{ mounts_mergerfs_version }}'"
+  when: mergerfs_installed_version.stdout is not version(mounts_mergerfs_version, '==')
 
 - name: Remove .deb file
   file:
-    path: "{{ mergefs_tmp_dir }}/mergerfs_{{ mergerfs_version }}.{{ ansible_distribution|lower }}-{{ ansible_distribution_release }}_amd64.deb"
+    path: "{{ mounts_mergerfs_tmp_dir }}/mergerfs_{{ mounts_mergerfs_version }}.{{ ansible_distribution|lower }}-{{ ansible_distribution_release }}_amd64.deb"
     state: absent
