--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -14,6 +14,7 @@
     and not
     ("already mapped or mounted" in item.stderr_lines|last)
   with_items: "{{ unlock_drives.results }}"
+  listen: Unlock encrypted drives
 
 - name: Mount drives
   become: true
