--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: Unlock encrypted drives
   become: true
-  shell: "cryptdisks_start {{ item.name | default(item.uuid) }}"
+  ansible.builtin.command: "cryptdisks_start {{ item.name | default(item.uuid) }}"
   with_items: "{{ mounts_encrypted }}"
   register: unlock_drives
   ignore_errors: true
 
 - name: Verify all encrypted drives could be unlocked
-  fail:
+  ansible.builtin.fail:
     msg: "{{ item.stderr }}"
   when: >
     (item.rc != 0)
@@ -20,4 +20,4 @@
   become: true
   args:
     warn: false
-  shell: mount -a
+  ansible.builtin.command: mount -a
