If a new encrypted disk is to be mounted, a reload must be performed.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,6 +4,7 @@
   ansible.builtin.systemd:
     state: started
     name: "systemd-cryptsetup@{{ item.name | default(item.uuid) }}"
+    daemon_reload: true
   with_items: "{{ mounts_encrypted }}"
 
 - name: Mount drives
